# tib2farmer

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  README.md
resources/: .desktop.in  resources.rc
src/: data_retrieval.c  data_retrieval.h  game_data.c  game_data.h  main.c  pdc_config.h  tib2farmer.c  timer.c  timer.h  ui.c  ui.h  utils.c  utils.h
